force-app/main/default/objects/Exclusive_Bookings__c/Exclusive_Bookings__c.object-meta.xml
<CustomObject>
    <label>Exclusive Bookings</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Exclusive Bookings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusive Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>