force-app/main/default/objects/Exclusive_Bookings__c/fields/amount_outstanding__c.field-meta.xml
<CustomField>
    <fullName>amount_outstanding__c</fullName>
    <formula>Trip_Value__c - Credit_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>