force-app/main/default/objects/Exclusive_Bookings__c/fields/Credit_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credit_Applied__c</fullName>
    <label>Credit Applied</label>
    <summarizedField>EB_Coupon__c.total_discounts__c</summarizedField>
    <summaryForeignKey>EB_Coupon__c.Exclusive_Bookings__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>