force-app/main/default/objects/Exclusive_Bookings__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <label>Departure City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>