force-app/main/default/objects/Exclusive_Bookings__c/fields/Flights_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Flights_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flights Cancelled</label>
    <type>Checkbox</type>
</CustomField>