force-app/main/default/objects/Exclusive_Bookings__c/fields/No_of_PAX__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAX__c</fullName>
    <label>No of PAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>