force-app/main/default/objects/Exclusive_Bookings__c/fields/Portal_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Image_URL__c</fullName>
    <label>Portal Image(URL)</label>
    <type>Url</type>
</CustomField>