force-app/main/default/objects/Exclusive_Bookings__c/fields/Trip_Value__c.field-meta.xml
<CustomField>
    <fullName>Trip_Value__c</fullName>
    <label>Trip Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>