force-app/main/default/objects/Exclusive_Bookings__c/validationRules/Not_published_if_amount_outstanding.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_published_if_amount_outstanding</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( Status__c ) = &quot;Published&quot;, NOT( amount_outstanding__c = 0.00)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Amount outstanding must be $0.00 to publish.</errorMessage>
</ValidationRule>