force-app/main/default/objects/Exclusive_Bookings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>amount_outstanding__c</columns>
    <columns>Credit_Applied__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2022 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>